bin/testsuite/tests/compiler/src/errors/compiler4938.swg
#global testerror "Err0519"

func toto(me)
{
}